[gd_scene load_steps=32 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://images/in_game_background.png" type="Texture" id=2]
[ext_resource path="res://images/panel.png" type="Texture" id=3]
[ext_resource path="res://components/trap_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/button01.png" type="Texture" id=5]
[ext_resource path="res://components/trap01.tscn" type="PackedScene" id=6]
[ext_resource path="res://images/button02.png" type="Texture" id=7]
[ext_resource path="res://components/trap02.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/button03.png" type="Texture" id=9]
[ext_resource path="res://components/trap03.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/button04.png" type="Texture" id=11]
[ext_resource path="res://components/trap04.tscn" type="PackedScene" id=12]
[ext_resource path="res://images/button05.png" type="Texture" id=13]
[ext_resource path="res://components/trap05.tscn" type="PackedScene" id=14]
[ext_resource path="res://images/button06.png" type="Texture" id=15]
[ext_resource path="res://components/trap06.tscn" type="PackedScene" id=16]
[ext_resource path="res://trap_detail.gd" type="Script" id=17]
[ext_resource path="res://images/coin.png" type="Texture" id=18]
[ext_resource path="res://images/attack.png" type="Texture" id=19]
[ext_resource path="res://images/clock.png" type="Texture" id=20]
[ext_resource path="res://components/number_label.tscn" type="PackedScene" id=21]
[ext_resource path="res://images/button.png" type="Texture" id=22]
[ext_resource path="res://images/button_flat.png" type="Texture" id=23]
[ext_resource path="res://images/upgrade.png" type="Texture" id=24]
[ext_resource path="res://images/wave.png" type="Texture" id=25]
[ext_resource path="res://images/game_over.png" type="Texture" id=26]
[ext_resource path="res://images/win.png" type="Texture" id=27]

[sub_resource type="SpatialMaterial" id=4]

render_priority = 0
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 1
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Flags", "Parameters" ]

[sub_resource type="QuadMesh" id=5]

size = Vector2( 1, 1 )

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 260, 370 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="Theme" id=2]

Panel/styles/ = SubResource( 1 )
_sections_unfolded = [ "Panel", "Panel/styles", "Resource" ]

[node name="game" type="Spatial"]

script = ExtResource( 1 )

[node name="scene" type="Spatial" parent="."]

editor/display_folded = true

[node name="floors" type="Spatial" parent="scene"]

[node name="walls" type="Spatial" parent="scene"]

[node name="ghosts" type="Spatial" parent="scene"]

[node name="camera" type="Camera" parent="."]

transform = Transform( 1, 0, 0, 0, 0.544639, 0.838671, 0, -0.838671, 0.544639, 0, 6, 5 )
projection = 0
fov = 70.0
near = 0.05
far = 100.0
keep_aspect = 1
current = false
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler/tracking = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="background" type="MeshInstance" parent="camera"]

transform = Transform( 48, 0, 0, 0, 27, 0, 0, 0, 1, 0, 0, -16 )
layers = 1
material_override = SubResource( 4 )
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 5 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Geometry", "Transform", "material" ]

[node name="trap_buttons" type="TextureRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1014.0
margin_top = -4.0
margin_right = 1274.0
margin_bottom = 366.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 2 )
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="trap_button_01" parent="trap_buttons" instance=ExtResource( 4 )]

margin_left = 28.0
margin_top = 31.0
margin_right = 128.0
margin_bottom = 131.0
trap_image = ExtResource( 5 )
trap_scene = ExtResource( 6 )
attack = 5
interval = 2.0

[node name="trap_button_02" parent="trap_buttons" instance=ExtResource( 4 )]

margin_left = 133.0
margin_top = 31.0
margin_right = 233.0
margin_bottom = 131.0
trap_image = ExtResource( 7 )
trap_scene = ExtResource( 8 )
price = 250
interval = 4.0

[node name="trap_button_03" parent="trap_buttons" instance=ExtResource( 4 )]

margin_left = 29.0
margin_top = 136.0
margin_right = 129.0
margin_bottom = 236.0
trap_image = ExtResource( 9 )
trap_scene = ExtResource( 10 )
price = 250
attack = 2
upgrade_interval = false
interval = 5.0

[node name="trap_button_04" parent="trap_buttons" instance=ExtResource( 4 )]

margin_left = 133.0
margin_top = 136.0
margin_right = 233.0
margin_bottom = 236.0
trap_image = ExtResource( 11 )
trap_scene = ExtResource( 12 )
price = 1000
upgrade_attack = false
attack = 0
upgrade_interval = false
interval = 10.0
can_upgrade = false

[node name="trap_button_05" parent="trap_buttons" instance=ExtResource( 4 )]

margin_left = 28.0
margin_top = 240.0
margin_right = 128.0
margin_bottom = 340.0
trap_image = ExtResource( 13 )
trap_scene = ExtResource( 14 )
price = 1000
attack = 20
interval = 6.0

[node name="trap_button_06" parent="trap_buttons" instance=ExtResource( 4 )]

margin_left = 133.0
margin_top = 241.0
margin_right = 233.0
margin_bottom = 341.0
trap_image = ExtResource( 15 )
trap_scene = ExtResource( 16 )
price = 1500
attack = 999
can_upgrade = false

[node name="trap_detail" type="TextureRect" parent="."]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1011.0
margin_top = 362.0
margin_right = 1271.0
margin_bottom = 717.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
script = ExtResource( 17 )

[node name="trap_image" type="TextureRect" parent="trap_detail"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 79.0
margin_top = 45.0
margin_right = 179.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="coin_icon" type="TextureRect" parent="trap_detail"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 154.0
margin_right = 69.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 18 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="attack_icon" type="TextureRect" parent="trap_detail"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 187.0
margin_right = 69.0
margin_bottom = 217.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 19 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="interval_icon" type="TextureRect" parent="trap_detail"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 223.0
margin_right = 70.0
margin_bottom = 253.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 20 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="price_label" parent="trap_detail" instance=ExtResource( 21 )]

margin_left = 78.0
margin_top = 155.0
margin_right = 118.0
margin_bottom = 191.0

[node name="attack_label" parent="trap_detail" instance=ExtResource( 21 )]

margin_left = 79.0
margin_top = 189.0
margin_right = 119.0
margin_bottom = 225.0

[node name="interval_label" parent="trap_detail" instance=ExtResource( 21 )]

margin_left = 79.0
margin_top = 223.0
margin_right = 119.0
margin_bottom = 259.0

[node name="upgrade" type="TextureButton" parent="trap_detail"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_top = 270.0
margin_right = 202.0
margin_bottom = 325.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="icon" type="TextureRect" parent="trap_detail/upgrade"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 24 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="upgrade_price" parent="trap_detail/upgrade" instance=ExtResource( 21 )]

margin_left = 41.0
margin_top = 15.0
margin_right = 59.0
margin_bottom = 45.0
text_size = 20.0

[node name="hud" type="Node" parent="."]

[node name="coin_icon" type="TextureRect" parent="hud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 18 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="money_label" parent="hud" instance=ExtResource( 21 )]

margin_left = 55.0
margin_top = 12.0
margin_right = 95.0
margin_bottom = 52.0
text_size = 36.0

[node name="wave" type="TextureRect" parent="hud"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 356.0
margin_top = 251.0
margin_right = 659.0
margin_bottom = 351.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 25 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="number" parent="hud/wave" instance=ExtResource( 21 )]

margin_left = 335.0
margin_top = 5.0
margin_right = 375.0
margin_bottom = 45.0
text_size = 100.0

[node name="wave_top" type="TextureRect" parent="hud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 452.0
margin_top = 5.0
margin_right = 557.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 25 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect" ]

[node name="number" parent="hud/wave_top" instance=ExtResource( 21 )]

margin_left = 118.0
margin_top = 1.0
margin_right = 158.0
margin_bottom = 41.0
text_size = 32.0

[node name="game_over" type="TextureRect" parent="hud"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 245.0
margin_right = 1188.0
margin_bottom = 446.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 26 )
stretch_mode = 0

[node name="win" type="TextureRect" parent="hud"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 172.0
margin_right = 1018.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 27 )
stretch_mode = 0

[connection signal="on_click" from="trap_buttons/trap_button_01" to="." method="on_trap_button_click"]

[connection signal="on_click" from="trap_buttons/trap_button_02" to="." method="on_trap_button_click"]

[connection signal="on_click" from="trap_buttons/trap_button_03" to="." method="on_trap_button_click"]

[connection signal="on_click" from="trap_buttons/trap_button_04" to="." method="on_trap_button_click"]

[connection signal="on_click" from="trap_buttons/trap_button_05" to="." method="on_trap_button_click"]

[connection signal="on_click" from="trap_buttons/trap_button_06" to="." method="on_trap_button_click"]

[connection signal="pressed" from="trap_detail/upgrade" to="." method="on_upgrade"]


